kubernetes/apps/social/gotosocial/app/cors-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gotosocial-cors
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gotosocial
  cors:
    allowOrigins:
      - https://phanpy.bo0.tz
    allowMethods:
      - GET
      - POST
      - OPTIONS
    allowHeaders:
      - Content-Type
      - Authorization
      - Cache-Control
    allowCredentials: true
